--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ShebellaBeauty.github.io/Shebella/",
+  "homepage": "react-scripts",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
