--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "react-scripts",
+  "homepage": "http://shebellabeauty.com",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
